src/test/test-models/bad/compound-assign/plus_equals_type_mismatch.stan
functions {
  real foo(real a1) {
    real lf1 = a1;
    int lf2;
    lf2 += a1;
    return lf1;
  }
}
